tests/snapshots/tui_commit_detail__commit_detail_crlf_lines_no_carriage_return.snap
---
source: tests/tui_commit_detail.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Commit information                                                              ",
        "█                                                                               ",
        "█Commit: crlf001                                                                ",
        "█                                                                               ",
        "█File with CRLF line endings                                                    ",
        "█                                                                               ",
        "█Author: Test Author <test@example.com>                                         ",
        "█Author Date: 2024-01-15 11:30:00 +0000                                         ",
        "█                                                                               ",
        "█Committer: Test Committer <committer@example.com>                              ",
        "█Commit Date: 2024-01-15 11:30:00 +0000                                         ",
        "█                                                                               ",
        "█Changed Files:                                                                 ",
        "█                                                                               ",
        "█  M hello.txt                                                                  ",
        "█                                                                               ",
        "█Diff:                                                                          ",
        "█                                                                               ",
        "█--- a/hello.txt                                                                ",
        "█+++ b/hello.txt                                                                ",
        "█@@ -1,2 +1,2 @@                                                                ",
        "█ unchanged line                                                                ",
        "│-old content                                                                   ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
