tests/snapshots/tui_commit_detail__commit_detail_hscroll_offset_clips_content.snap
---
source: tests/tui_commit_detail.rs
assertion_line: 75
expression: "harness.render(|frame|\n{\n    let area = frame.area();\n    views::commit_detail::render(&repo, frame, &mut app, area);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Commit information                                                              ",
        "                                                                                ",
        "c123def456                                                                      ",
        "                                                                                ",
        "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
        "                                                                                ",
        "st Author <test@example.com>                                                    ",
        "e: 2024-01-15 11:30:00 +0000                                                    ",
        "                                                                                ",
        " Test Committer <committer@example.com>                                         ",
        "e: 2024-01-15 11:30:00 +0000                                                    ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "────────█████████████████████████████████████████████████████████████████───────",
        " abc123def456 1/1                                             Press 'h' for help",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 62, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
    ]
}
