tests/snapshots/tui_commit_detail__commit_detail_short_lines_no_hscroll.snap
---
source: tests/tui_commit_detail.rs
expression: "harness.render(|frame|\n{\n    let area = frame.area();\n    views::commit_detail::render(&repo, frame, &mut app, area);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Commit information                                                   context: 3 ",
        "                                                                                ",
        "Commit: abc123def456                                                            ",
        "                                                                                ",
        "Short commit                                                                    ",
        "                                                                                ",
        "Author: Test Author <test@example.com>                                          ",
        "Author Date: 2024-01-15 11:30:00 +0000                                          ",
        "                                                                                ",
        "Committer: Test Committer <committer@example.com>                               ",
        "Commit Date: 2024-01-15 11:30:00 +0000                                          ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 1/1                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
