tests/snapshots/tui_commit_detail__search_case_sensitive.snap
---
source: tests/tui_commit_detail.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Commit information                                                   context: 3 ",
        "█                                                                               ",
        "█Commit: abc123                                                                 ",
        "█                                                                               ",
        "█Add FOO feature                                                                ",
        "█                                                                               ",
        "█Author: Test Author <test@example.com>                                         ",
        "█Author Date: 2024-01-15 11:30:00 +0000                                         ",
        "█                                                                               ",
        "█Committer: Test Committer <committer@example.com>                              ",
        "█Commit Date: 2024-01-15 11:30:00 +0000                                         ",
        "█                                                                               ",
        "█Changed Files:                                                                 ",
        "█                                                                               ",
        "█  M foo.txt                                                                    ",
        "█                                                                               ",
        "█Diff:                                                                          ",
        "█                                                                               ",
        "█--- a/foo.txt                                                                  ",
        "█+++ b/foo.txt                                                                  ",
        "█@@ -1,1 +1,2 @@                                                                ",
        "│+FOO bar                                                                       ",
        "/FOO  [1/2]                                                                     ",
        " abc123 1/1                                                  Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Black, bg: LightCyan, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Black, bg: Yellow, underline: Reset, modifier: NONE,
        x: 5, y: 21, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
